Modifed the announcement files to send emails

--- a/web/css/announcement.css
+++ b/web/css/announcement.css
@@ -70,6 +70,7 @@
     margin-bottom: 10px !important;
 }
 
-#course_announcement_form_holder .sf_admin_form_row label {
+#course_announcement_form_holder .sf_admin_form_row label, 
+#announcement_form_holder .sf_admin_form_row label {
     float: none !important;
 }
