Modified the email_template schema

--- a/web/css/email_template.css
+++ b/web/css/email_template.css
@@ -1,8 +1,7 @@
-/* course form elements */
 .sf_admin_form_field_name, .sf_admin_form_field_subject, .sf_admin_form_field_from_email,
-.sf_admin_form_field_to_email,  .sf_admin_form_field_cc_email, .sf_admin_form_field_bcc_email,
-.sf_admin_form_field_reply_to, .sf_admin_form_field_credits, .sf_admin_form_field_hours,
-.sf_admin_form_field_max_enrolled{
+.sf_admin_form_field_from_name, .sf_admin_form_field_to_email,  .sf_admin_form_field_cc_email,
+.sf_admin_form_field_bcc_email, .sf_admin_form_field_reply_to, .sf_admin_form_field_credits, 
+.sf_admin_form_field_hours, .sf_admin_form_field_max_enrolled{
     float: left;
     width: 341px;
 }
