--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -713,7 +713,7 @@ span.green{
     height: 330px;
     overflow: auto;
     margin-bottom: 20px;
-    padding: 0 10px 10px 0;
+    padding: 0 10px 10px 10px;
     display: block;
     position: relative;
 }
