--- a/web/css/tutorplus.css
+++ b/web/css/tutorplus.css
@@ -14,19 +14,19 @@
 }
 
 #main-header, #header-big{
+    background: url("/images/bg_content.jpg") repeat;
     position: fixed;
     width: 100%;
-    z-index: 100;
+    height: 70px;
     position: fixed;
     width: 100%;
-    z-index: 999999;
+    z-index: 99999;
     top: 0;
     left: 0;
 }
 
 #header-wrapper{
     margin: 0 auto;
-    height: 85px;
 }
 
 #top-header-big{
@@ -38,16 +38,12 @@
 
 #inner-header-wrapper{
     overflow: hidden;
-    height: 69px; 
-    background: url("/images/bg_header.png") repeat-x transparent;
+    height: 69px;
 }
 
 #inner-header-landing-wrapper{
     height: 122px; 
     background: url("/images/bg_landing_header.jpg") repeat-x transparent;
-}
-
-#main-header{
 }
 
 #tutorplus{
@@ -1018,11 +1014,38 @@
 }
 
 .landing-image{
-    background: url("/images/home-01.jpg") -231px 0 no-repeat;
-    display: inline-block;
+    position:relative;
+    overflow:hidden;
     width: 590px;
     height: 266px;
     margin: 10px
+}
+
+.landing-image div {
+    float:left;
+}
+
+a.browse{
+    background: url(/media/img/scrollable/arrow/hori_large.png) no-repeat;
+    display: block;
+    width: 30px;
+    height: 30px;
+    float: left;
+    margin: 40px 10px;
+    cursor: pointer;
+    font-size: 1px;    
+}
+
+a.right {
+    background-position: 0 -30px;
+    clear: right;
+    margin-right: 0px;
+}
+
+.landing-image .items {
+    width: 590px;
+    height: 266px;
+    position:absolute;
 }
 
 .images-container{
@@ -1030,9 +1053,6 @@
     display: inline-block;
     width: 612px;
     height: 289px;
-}
-
-.instructor-of-the-week{
 }
 
 .landing-right-column{
@@ -1336,7 +1356,6 @@ textarea {
 
 .register-container label{
     float: none !important;
-    width: 336px !important;
 }
 
 .register-container .sf_admin_form_field_country_id{
@@ -1385,4 +1404,25 @@ textarea {
 ul.department-course{
     list-style-type: disc !important;
     padding-left: 2em;
+}
+
+.department-course{
+    position: relative;
+    height: 30px;    
+}
+
+.department-course label{    
+    position: absolute;
+    left: 40px;
+    top: 5px;
+}
+
+.checkbox input{       
+    position: absolute;
+    left: 11px;
+    top: 9px;
+}
+
+.checkbox{       
+    position: relative;
 }
