--- a/web/css/form.css
+++ b/web/css/form.css
@@ -99,7 +99,7 @@ input[type="text"], input[type="password"]{
 }
 
 input[type="password"]:focus, input[type="text"]:focus, textarea:focus{
-    border: 1px solid #134D58;
+    border: 1px solid #AB6634;
     outline: medium none;
 }
 
@@ -110,27 +110,27 @@ input[type="password"]:focus, input[type="text"]:focus, textarea:focus{
 
 .save, #add_files, .new, .button, .choose-recipient{
     border-radius: 3px;
-    background-color: #134D58;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#21616D),to(#134D58	));
-    background-image: -webkit-linear-gradient(top,#21616D,#134D58);
-    background-image: -moz-linear-gradient(top,#21616D,#134D58);
-    background-image: -ms-linear-gradient(top,#21616D,#134D58);
-    background-image: -o-linear-gradient(top,#21616D,#134D58);
-    background-image: linear-gradient(top,#21616D,#134D58);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#21616D',EndColorStr='#134D58');
-    border: 1px solid #21616D;
+    background-color: #AB6634;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#C37E4C),to(#AB6634	));
+    background-image: -webkit-linear-gradient(top,#C37E4C,#AB6634);
+    background-image: -moz-linear-gradient(top,#C37E4C,#AB6634);
+    background-image: -ms-linear-gradient(top,#C37E4C,#AB6634);
+    background-image: -o-linear-gradient(top,#C37E4C,#AB6634);
+    background-image: linear-gradient(top,#C37E4C,#AB6634);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#C37E4C',EndColorStr='#AB6634');
+    border: 1px solid #C37E4C;
     color: white !important;
 }
 
 .save:hover, #add_files:hover, .new:hover, .button:hover, choose-recipient:hover{
-    background-color: #21616D;
-    background-image: -webkit-gradient(linear,left top,left bottom,from(#134D58),to(#21616D	));
-    background-image: -webkit-linear-gradient(top,#134D58,#21616D);
-    background-image: -moz-linear-gradient(top,#134D58,#21616D);
-    background-image: -ms-linear-gradient(top,#134D58,#21616D);
-    background-image: -o-linear-gradient(top,#134D58,#21616D);
-    background-image: linear-gradient(top,#134D58,#21616D);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#134D58',EndColorStr='#21616D');
+    background-color: #C37E4C;
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#AB6634),to(#C37E4C	));
+    background-image: -webkit-linear-gradient(top,#AB6634,#C37E4C);
+    background-image: -moz-linear-gradient(top,#AB6634,#C37E4C);
+    background-image: -ms-linear-gradient(top,#AB6634,#C37E4C);
+    background-image: -o-linear-gradient(top,#AB6634,#C37E4C);
+    background-image: linear-gradient(top,#AB6634,#C37E4C);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#AB6634',EndColorStr='#C37E4C');
 }
 
 select{
