--- a/web/css/tutorplus.css
+++ b/web/css/tutorplus.css
@@ -108,7 +108,7 @@
 }
 
 #main-container a, #login-container{
-    color: #21616D;
+    color: #985321;
 }
 
 #container-wrapper, #main-container-wrapper{
@@ -129,14 +129,14 @@
 }
 
 #main-menu{    
-    background: url("/images/bg_menu.jpg") repeat-x 0 -8px transparent !important;
+    background-color: #C37E4C;
     height: 45px;
 }
 
 #top-menu .separator{
-    background: url("/images/bg_menu_separator.jpg") no-repeat -3px -8px transparent;
+    background-color: #FFF;
     height: 45px;
-    width: 3px;
+    width: 1px;
 }
 
 #top-menu ul li{
@@ -153,7 +153,7 @@
 }
 
 #top-menu ul li.active{
-    background: url("/images/bg_menu_selected.jpg") repeat-x 0 -8px transparent !important;
+    background-color: #985321;
     height: 45px;
 }
 
@@ -202,7 +202,7 @@
 }
 
 #header-links ul li a{
-    color: #21616D !important;
+    color: #985321 !important;
 }
 
 #top-menu, #inner-container-wrapper{
@@ -245,7 +245,7 @@
     border-top: 1px solid #CCCCCC;
     background-color: #FFFFFF !important;
     bottom: 0;
-    color: #21616D;
+    color: #985321;
     height: 37px;
     position: fixed;
     margin: 0 auto;
@@ -298,7 +298,7 @@
 }
 
 #main-footer ul li a{
-    color: #21616D !important;
+    color: #985321 !important;
 }
 
 #breadcrumbs-container-wrapper{
@@ -362,7 +362,7 @@
 }
 
 #sf_admin_container .content-heading h3{
-    color: #21616D;
+    color: #985321;
     font-size: 14px;
     font-weight: normal;
 }
@@ -425,23 +425,24 @@
 }
 
 #sf_admin_container .content-block h2, .sf_admin_form fieldset h2{
-    background-color: #F1F1F1;
+    background-color: #C37E4C;
     border-radius: 3px 3px 0 0;
     clear: both;
+    color: #FFF;
     font-weight: normal;
     font-size: 13px;
     border-bottom: 1px solid #FFFFFF;
-    padding: 10px;
+    padding: 5px 10px;
 }
 
 #sf_admin_container .content-block h2 .actions, #sf_admin_form_container h2 .actions{
-    color: #21616D;
+    color: #985321;
     float: right;
     display: block;
 }
 
 #sf_admin_container .content-block h2 a, #sf_admin_form_container h2 a {
-    color: #21616D;
+    color: #FFF !important;
 }
 
 #sf_admin_container .content-row{
@@ -468,7 +469,7 @@
 }
 
 .more-link a{
-    color: #21616D;
+    color: #985321;
 }
 
 #left-panel{
@@ -1229,7 +1230,7 @@ a.right {
 }
 
 .email-recipient{
-    color: #21616D;
+    color: #985321;
 }
 
 .photo-link{
@@ -1275,7 +1276,7 @@ ul.nav-tabs li.active-tab {
 
 .list-count{
     color: #FFFFFF;
-    background-color: #21616D;
+    background-color: #985321;
     padding: 3px 6px;
     border-radius: 5px;
     font-size: 11px;
@@ -1394,11 +1395,11 @@ textarea {
 }
 
 #tp_admin_heading h3{
-    color: #21616D;
+    color: #985321;
     font-weight: bold;
     font-size: 14px;
     text-transform: uppercase;
-    border-bottom: 1px solid #21616D;
+    border-bottom: 1px solid #985321;
     padding-bottom: 10px;
 }
 
