--- a/web/css/symfony.css
+++ b/web/css/symfony.css
@@ -170,7 +170,7 @@ ul.sf_admin_td_actions li.sf_admin_action_delete{
 }
 
 .notice{
-    background-color: #DEFFBA;
+    background-color: #FEEEAB;
     font-size: 12px;
     padding: 5px 30px;
     text-align: center;
